fix gap

--- a/src/pages/coaches/index.module.css
+++ b/src/pages/coaches/index.module.css
@@ -20,14 +20,11 @@
   padding: 14px;
   border-radius: 8px;
   background: rgba(128, 128, 128, 0.2);
-
   font-size: 22px;
   font-weight: 600;
   line-height: 33px;
   color: rgba(212, 212, 212, 1);
   overflow: hidden;
-  margin-bottom: 50px;
-  margin-left: 50px;
 }
 
 .coach_card_add {
@@ -52,7 +49,8 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  margin: 0 75px;
+  margin: 150px 75px;
+  gap: 50px;
 }
 
 .coach_infos {
