--- a/src/pages/shotCamps/index.module.css
+++ b/src/pages/shotCamps/index.module.css
@@ -29,8 +29,6 @@
   line-height: 33px;
   color: rgba(212, 212, 212, 1);
   overflow: hidden;
-  margin-bottom: 50px;
-  margin-left: 50px;
 }
 
 .camp_card_add {
@@ -55,7 +53,8 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  margin: 0 75px;
+  margin: 150px 75px;
+  gap: 50px;
 }
 
 .edit_camp_content {
